--- a/org.eclipse.emf.emfstore.common.model/plugin.xml
+++ b/org.eclipse.emf.emfstore.common.model/plugin.xml
@@ -9,12 +9,12 @@
 -->
 
 <plugin>
-   <extension-point id="org.eclipse.emf.emfstore.common.model.modelversion" name="ModelVersion" schema="schema/org.eclipse.emf.emfstore.common.model.modelversion.exsd"/>
-   <extension-point id="org.eclipse.emf.emfstore.common.model.ignoredatatype" name="Ignore Datatype" schema="schema/org.eclipse.emf.emfstore.common.model.ignoredatatype.exsd"/>
-   <extension-point id="org.eclipse.emf.emfstore.common.model.singletonidresolver" name="Singleton ID Resolver" schema="schema/org.eclipse.emf.emfstore.common.model.singletonidresolver.exsd"/>
-   <extension-point id="org.eclipse.emf.emfstore.common.model.serializationoptions" name="Serialization Options" schema="schema/org.eclipse.emf.emfstore.common.model.serializationoptions.exsd"/>
-   <extension-point id="org.eclipse.emf.emfstore.common.model.modelelementidgenerator" name="ModelElementIDGenerator" schema="schema/org.eclipse.emf.emfstore.common.model.modelelementidgenerator.exsd"/>
-   <extension-point id="org.eclipse.emf.emfstore.common.model.resourceoptions" name="Common Model Resource Options" schema="schema/org.eclipse.emf.emfstore.common.model.resourceoptions.exsd"/>
+   <extension-point id="modelVersion" name="ModelVersion" schema="schema/modelVersion.exsd"/>
+   <extension-point id="ignoreDatatype" name="Ignore Datatype" schema="schema/ignoreDatatype.exsd"/>
+   <extension-point id="singletonIdResolver" name="Singleton ID Resolver" schema="schema/singletonIdResolver.exsd"/>
+   <extension-point id="serializationOptions" name="Serialization Options" schema="schema/serializationOptions.exsd"/>
+   <extension-point id="modelelementIdGenerator" name="ModelElementIDGenerator" schema="schema/modelelementIdGenerator.exsd"/>
+   <extension-point id="resourceOptions" name="Common Model Resource Options" schema="schema/resourceOptions.exsd"/>
 
    <extension point="org.eclipse.emf.ecore.generated_package">
       <package
