--- a/org.eclipse.emf.emfstore.branding/build.properties
+++ b/org.eclipse.emf.emfstore.branding/build.properties
@@ -2,7 +2,7 @@ source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                about.ini,\
-               unicase_big.png,\
                .,\
                about.mappings,\
-               about.properties
+               about.properties,\
+               emfstore.png
