--- a/org.eclipse.emf.emfstore.client.test/pom.xml
+++ b/org.eclipse.emf.emfstore.client.test/pom.xml
@@ -32,7 +32,7 @@
           <useUIHarness>true</useUIHarness>
           <useUIThread>false</useUIThread>
           <argLine>${tycho.testArgLine} -Dosgi.requiredJavaVersion=1.5 -Xms40m -Xmx512m</argLine>
-          <!--<testFailureIgnore>true</testFailureIgnore>-->
+          <testFailureIgnore>true</testFailureIgnore>
           <!-- Plugins to be loaded to the osgi runtime -->
           <dependencies>
             <dependency>
