switched CommitProjectHandler/ProjectHasLocalChangesTester to new API

--- a/org.eclipse.emf.emfstore.client.ui/plugin.xml
+++ b/org.eclipse.emf.emfstore.client.ui/plugin.xml
@@ -74,7 +74,7 @@
                     ifEmpty="true"
                     operator="and">
                  <instanceof
-                       value="org.eclipse.emf.emfstore.internal.client.model.ProjectSpace">
+                       value="org.eclipse.emf.emfstore.client.ESLocalProject">
                  </instanceof>
                  <test
                        forcePluginActivation="true"
