--- a/bundles/org.eclipse.emf.emfstore.ecore/pom.xml
+++ b/bundles/org.eclipse.emf.emfstore.ecore/pom.xml
@@ -6,7 +6,7 @@
     <groupId>org.eclipse.emf.emfstore</groupId>
     <artifactId>emfstore-parent</artifactId>
     <version>1.0.0-SNAPSHOT</version>
-    <relativePath>../../org.eclipse.emf.emfstore.releng/emfstore-parent/</relativePath>
+    <relativePath>../../releng/emfstore-parent/</relativePath>
   </parent>
   <groupId>org.eclipse.emf.emfstore</groupId>
   <artifactId>org.eclipse.emf.emfstore.ecore</artifactId>
