--- a/tests/org.eclipse.emf.emfstore.client.test/pom.xml
+++ b/tests/org.eclipse.emf.emfstore.client.test/pom.xml
@@ -7,7 +7,7 @@
     <groupId>org.eclipse.emf.emfstore</groupId>
     <artifactId>emfstore-parent</artifactId>
     <version>1.0.0-SNAPSHOT</version>
-    <relativePath>../../org.eclipse.emf.emfstore.releng/emfstore-parent/</relativePath>
+    <relativePath>../../releng/emfstore-parent/</relativePath>
   </parent>
 
   <groupId>org.eclipse.emf.emfstore</groupId>
