fixed typo in model

--- a/bundles/org.eclipse.emf.emfstore.examplemodel.edit/plugin.properties
+++ b/bundles/org.eclipse.emf.emfstore.examplemodel.edit/plugin.properties
@@ -70,3 +70,4 @@ _UI_Tournament_receivesTrophy_feature = Receives Trophy
 _UI_Tournament_matchDays_feature = Match Days
 _UI_Player_winLossRatio_feature = Win Loss Ratio
 _UI_Matchup_nrSpecators_feature = Nr Specators
+_UI_Matchup_nrSpectators_feature = Nr Spectators
