--- a/bundles/org.eclipse.emf.emfstore.examplemodel.edit/plugin.properties
+++ b/bundles/org.eclipse.emf.emfstore.examplemodel.edit/plugin.properties
@@ -71,3 +71,6 @@ _UI_Tournament_matchDays_feature = Match Days
 _UI_Player_winLossRatio_feature = Win Loss Ratio
 _UI_Matchup_nrSpecators_feature = Nr Specators
 _UI_Matchup_nrSpectators_feature = Nr Spectators
+_UI_Player_gender_feature = Gender
+_UI_Gender_Female_literal = Female
+_UI_Gender_Male_literal = Male
