--- a/bundles/org.eclipse.emf.emfstore.server.model.edit/plugin.properties
+++ b/bundles/org.eclipse.emf.emfstore.server.model.edit/plugin.properties
@@ -463,3 +463,4 @@ _UI_ModelElementQuery_lowerLimit_feature = Lower Limit
 _UI_PrimaryVersionSpec_projectStateChecksum_feature = Project State Checksum
 _UI_ChangePackage_projectStateChecksum_feature = Project State Checksum
 _UI_Version_projectStateChecksum_feature = Project State Checksum
+_UI_HistoryInfo_primarySpec_feature = Primary Spec
