--- a/releng/emfstore-parent/pom.xml
+++ b/releng/emfstore-parent/pom.xml
@@ -153,7 +153,8 @@
     <module>../../org.eclipse.emf.emfstore.other/org.eclipse.emf.emfstore.server.backchannel</module>
      -->
     <module>../../bundles/org.eclipse.emf.emfstore.modelmutator</module>
-
+    <module>../../features/org.eclipse.emf.emfstore.modelmutator.feature</module>
+        
     <!-- Fuzzy -->
     <!-- 
     <module>../org.eclipse.emf.emfstore.fuzzy.feature</module>
