introduced extension point to discard danling HREFs

--- a/bundles/org.eclipse.emf.emfstore.common/plugin.xml
+++ b/bundles/org.eclipse.emf.emfstore.common/plugin.xml
@@ -2,4 +2,5 @@
 <?eclipse version="3.4"?>
 <plugin>
    <extension-point id="observerBusExtensionPointRegistration" name="Observer Markup Interface" schema="schema/observerBusExtensionPointRegistration.exsd"/>
+   <extension-point id="discardDanglingHREFs" name="Discard Dangling HREFs" schema="schema/discardDanglingHREFs.exsd"/>
 </plugin>
