added target definition

--- a/releng/emfstore-parent/pom.xml
+++ b/releng/emfstore-parent/pom.xml
@@ -9,17 +9,18 @@
   <packaging>pom</packaging>
 
   <properties>
-    <tycho-version>0.16.0</tycho-version>
+    <tycho-version>0.17.0</tycho-version>
     <junit-version>4.8.2</junit-version>
     <maven-checkstyle-version>2.9.1</maven-checkstyle-version>
     <jacoco-version>0.5.7.201204190339</jacoco-version>
-	
+	<emfstore-version>1.0.0-SNAPSHOT</emfstore-version>
 	<!-- Properties to enable jacoco code coverage analysis with sonar -->
 	<sonar.core.codeCoveragePlugin>jacoco</sonar.core.codeCoveragePlugin>
 	<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
 	<sonar.jacoco.reportPath>../../tests/org.eclipse.emf.emfstore.client.test/target/jacoco.exec</sonar.jacoco.reportPath>
   </properties>
 
+<!-- 
   <profiles>
     <profile>
       <id>platform-galileo</id>
@@ -78,8 +79,10 @@
       </properties>
     </profile>
   </profiles>
-
+ -->
+ 
   <modules>
+  	<module>../../releng/_target</module>
     <!-- EMFStore Core Features -->
     <module>../../features/org.eclipse.emf.emfstore.common.feature</module>
     <module>../../bundles/org.eclipse.emf.emfstore.branding</module>
@@ -235,14 +238,23 @@
               <arch>x86_64</arch>
             </environment>
           </environments>
+	   <!-- work around Equinox bug 348045 (see https://bugs.eclipse.org/bugs/show_bug.cgi?id=348045) -->
+	   <!-- 
 	    <filters>
-            <!-- work around Equinox bug 348045 (see https://bugs.eclipse.org/bugs/show_bug.cgi?id=348045) -->
             <filter>
               <type>p2-installable-unit</type>
               <id>org.eclipse.equinox.servletbridge.extensionbundle</id>
               <removeAll />
             </filter>
           </filters>
+           -->
+          <target>
+			<artifact>
+				<groupId>org.eclipse.emf.emfstore</groupId>
+  				<artifactId>emfstore</artifactId>
+				<version>${emfstore-version}</version>
+			</artifact>
+		</target>
         </configuration>
       </plugin>
 
