Updated bowling model to contain unsettable features

--- a/bundles/org.eclipse.emf.emfstore.examplemodel.edit/plugin.properties
+++ b/bundles/org.eclipse.emf.emfstore.examplemodel.edit/plugin.properties
@@ -74,3 +74,20 @@ _UI_Matchup_nrSpectators_feature = Nr Spectators
 _UI_Player_gender_feature = Gender
 _UI_Gender_Female_literal = Female
 _UI_Gender_Male_literal = Male
+_UI_Fan_type = Fan
+_UI_Fan_name_feature = Name
+_UI_Fan_dateOfBirth_feature = Date Of Birth
+_UI_Fan_hasSeasonTicket_feature = Has Season Ticket
+_UI_Fan_eMails_feature = EMails
+_UI_Fan_gender_feature = Gender
+_UI_Fan_favouritePlayer_feature = Favourite Player
+_UI_Fan_visitedTournaments_feature = Visited Tournaments
+_UI_Fan_numberOfTournamentsVisited_feature = Number Of Tournaments Visited
+_UI_Fan_moneySpentOnTickets_feature = Money Spent On Tickets
+_UI_Merchandise_type = Merchandise
+_UI_Fan_FanMerchandise_feature = Fan Merchandise
+_UI_Fan_favouriteMerchandise_feature = Favourite Merchandise
+_UI_Merchandise_name_feature = Name
+_UI_Merchandise_price_feature = Price
+_UI_Merchandise_serialNumber_feature = Serial Number
+_UI_Fan_fanMerchandise_feature = Fan Merchandise
