Added unset support to emfstore.

--- a/bundles/org.eclipse.emf.emfstore.server.model.edit/plugin.properties
+++ b/bundles/org.eclipse.emf.emfstore.server.model.edit/plugin.properties
@@ -465,3 +465,6 @@ _UI_ChangePackage_projectStateChecksum_feature = Project State Checksum
 _UI_Version_projectStateChecksum_feature = Project State Checksum
 _UI_HistoryInfo_primarySpec_feature = Primary Spec
 _UI_FeatureOperation_unset_feature = Unset
+_UI_UnsetType_NONE_literal = NONE
+_UI_UnsetType_IS_UNSET_literal = IS_UNSET
+_UI_UnsetType_WAS_UNSET_literal = 
