re-generated server.model{.edit} plugins because of new PagedUpdateVersionSpec

--- a/bundles/org.eclipse.emf.emfstore.server.model.edit/plugin.properties
+++ b/bundles/org.eclipse.emf.emfstore.server.model.edit/plugin.properties
@@ -465,3 +465,6 @@ _UI_ChangePackage_projectStateChecksum_feature = Project State Checksum
 _UI_Version_projectStateChecksum_feature = Project State Checksum
 _UI_HistoryInfo_primarySpec_feature = Primary Spec
 _UI_FeatureOperation_unset_feature = Unset
+_UI_PagedUpdateVersionSpec_type = Paged Update Version Spec
+_UI_PagedUpdateVersionSpec_maxChanges_feature = Max Changes
+_UI_PagedUpdateVersionSpec_baseVersionSpec_feature = Base Version Spec
